Created functioning demo
To-do: add comments to every code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Testovací aplikace</string>
+    <string name="app_name">Swipeable interface</string>
     <string name="buttonMain">Button</string>
 </resources>
